Секонд пейдж готов на 100%

--- a/tour__country.html
+++ b/tour__country.html
@@ -158,11 +158,12 @@
                     <h3 class="cfilter__title__date__title">Укажите дату вылета</h3>
 
                 </div>
-                <div class="cfilter__dates" id="sliderContainer">
-
-                </div>
-                <div class="cfilter__calendar">
-                    <p id="calendarTrigger" title="toggle" data-toggle>Отобразить весь календарь</p>
+                <div class="container">
+                    <div class="cfilter__dates" id="sliderContainer">
+                    </div>
+                    <div class="cfilter__calendar">
+                        <p id="calendarTrigger" title="toggle" data-toggle>Отобразить весь календарь</p>
+                    </div>
                 </div>
 
                 
